@@ -390,6 +390,9 @@ context Voice 	imes 2/3 @{
 procedure? "what callback to add to children of a vertical alignment.
 It determines what alignment procedure is used on the alignment
 itself.  .")
+(translator-property-description
+ 'voltaOnThisStaff boolean?
+ "Normally, volta brackets are put only on the topmost staff. Setting this variable to true, will force a bracket to be on this staff as well.")
 (translator-property-description 'voltaSpannerDuration moment? "maximum duration of the volta bracket.
 
     Set to a duration to control the size of the brackets printed by
